--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -251,6 +251,10 @@ ol li, ul li {
   }
 }
 
+.input-group-append.blank {
+  width: 30px;
+}
+
 .login-box {
   width: 600px;
   margin: 15% auto !important;
@@ -260,11 +264,23 @@ ol li, ul li {
       background-color: #6393cb;
 
       .login-box-msg {
+        font-size: 18px;
         color: #fff;
       }
     }
   }
 }
+
+.swal-modal {
+  width: 300px;
+  .swal-footer {
+    text-align: center;
+  }
+  .swal-button {
+    padding: 5px 10px !important;
+  }
+}
+
 
 i.fa.fa-close {
   display: none;
